--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
 	    		<ul>
 	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+				<li><a href="https://floin.github.io/blog/atom.xml">订阅博客</a></li>
 				</ul>
 			</footer>
 		</body>
