--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
+	        		<li><a href="/">主页</a></li>
+		        	<li><a href="/about">关于</a></li>
+	        		<li><a href="/curio">Curio</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
@@ -22,8 +22,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:v20130402@yeah.net">email</a></li>
+	        		<li><a href="https://github.com/floin">github.com/floin</a></li>
 				<li><a href="https://floin.github.io/blog/atom.xml">订阅博客</a></li>
 				</ul>
 			</footer>
