--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<title>{{ page.title }}</title>
-			{% include analytics.html %}
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
-		</head>
-		<body>
-			<nav>
-	    		<ul>
-	        		<li><a href="/">主页</a></li>
-		        	<li><a href="/about">关于</a></li>
-	        		<li><a href="/curio">Curio</a></li>
-	        		<li><a href="/blog">Blog</a></li>
-	    		</ul>
-			</nav>
-			<div class="container">
-			
-			{{ content }}
-			
-			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="mailto:v20130402@yeah.net">email</a></li>
-	        		<li><a href="https://github.com/floin">github.com/floin</a></li>
-				<li><a href="https://floin.github.io/blog/atom.xml">订阅博客</a></li>
-				</ul>
-			</footer>
-		</body>
-	</html>
+<html class="no-js">
+  <head>
+
+    {% include head.html %}
+
+  </head>
+  <body>
+
+
+    {% include header.html %}
+
+
+    {{ content }}
+
+
+
+
+
+
+
+
+
+    {% include footer.html %}
+
+    </body>
+</html>
